--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "license": "ISC",
   "devDependencies": {},
   "dependencies": {
-    "elm": "^0.18.0"
+    "chokidar": "^2.0.0",
+    "elm": "^0.18.0",
+    "livereload": "^0.6.3"
   },
   "repository": {
     "type": "git",
